# gklr

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  environment.yml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: doc-to-gh-pages.yml  upload-pypi-and-build-docs.yml
docs/: conf.py  index.md  requirements.txt
notebooks/: gklr_LPMC.ipynb  template.ipynb
scripts/: train_model.py
src/gklr/: __init__.py  calcs.py  config.py  estimation.py  gklr.py  kernel_calcs.py  kernel_estimator.py  kernel_matrix.py  kernel_utils.py  logger.py  optimizer.py
tests/: conftest.py
